--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "19.0.0",
     "react-native": "0.79.5",
     "expo-clipboard": "~7.1.5",
-    "expo-checkbox": "~4.1.4"
+    "expo-checkbox": "~4.1.4",
+    "@react-native-community/slider": "4.5.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
